--- a/Natours/index.html
+++ b/Natours/index.html
@@ -19,7 +19,9 @@
     <div class="navigation">
       <input type="checkbox" class="navigation__checkbox" id="navi-toggle" />
 
-      <label for="navi-toggle" class="navigation__btn">MENU</label>
+      <label for="navi-toggle" class="navigation__btn">
+        <span class="navigation__icon">&nbsp;</span>
+      </label>
 
       <div class="navigation__background">&nbsp;</div>
 
