natours project - modal window created and centered

--- a/Natours/index.html
+++ b/Natours/index.html
@@ -451,6 +451,10 @@
           </div>
         </div>
       </footer>
+
+      <div class="popup">
+        <div class="popup__content">POPUP</div>
+      </div>
     </main>
 
     <!--     
