--- a/Natours/index.html
+++ b/Natours/index.html
@@ -453,7 +453,29 @@
       </footer>
 
       <div class="popup">
-        <div class="popup__content">POPUP</div>
+        <div class="popup__content">
+          <div class="popup__left">
+            <img src="img/nat-8.jpg" alt="Tour photo" class="popup__img" />
+            <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img" />
+          </div>
+          <div class="popup__right">
+            <h2 class="heading-secondary">Start booking now</h2>
+            <h3 class="heading-tertiary">
+              Important &ndash; Please read these terms before booking
+            </h3>
+            <p class="popup__text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Architecto id magnam dignissimos quam sapiente perferendis
+              laboriosam, quasi ipsa, vel sit perspiciatis reiciendis
+              asperiores? Doloribus laudantium porro sit at quos eveniet. Lorem
+              ipsum dolor sit amet consectetur adipisicing elit. Illum ipsa
+              distinctio dolorem, porro pariatur exercitationem fugit
+              reprehenderit molestias eos, quo debitis laboriosam. Recusandae
+              excepturi perspiciatis reprehenderit nobis aut nostrum labore!
+            </p>
+            <a href="#" class="btn btn--green">Book Now</a>
+          </div>
+        </div>
       </div>
     </main>
 
