--- a/Natours/index.html
+++ b/Natours/index.html
@@ -10,6 +10,7 @@
     />
 
     <link rel="stylesheet" href="css/icon-font.css" />
+    <!-- can be removed when going live -->
     <link rel="stylesheet" href="css/style.css" />
     <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
 
