--- a/Nexter/index.html
+++ b/Nexter/index.html
@@ -141,7 +141,7 @@
           </svg>
           <p>€1,200,000</p>
         </div>
-        <button class="cta">Contact realtor</button>
+        <button class="btn home__btn">Contact realtor</button>
       </div>
 
       <div class="home">
@@ -174,8 +174,9 @@
           </svg>
           <p>€2,750,000</p>
         </div>
-        <button class="cta">Contact realtor</button>
+        <button class="btn home__btn">Contact realtor</button>
       </div>
+
       <div class="home">
         <img src="img/house-3.jpeg" alt="House 1" class="home__img" />
         <svg class="home__like">
@@ -206,8 +207,9 @@
           </svg>
           <p>€850,000</p>
         </div>
-        <button class="cta">Contact realtor</button>
+        <button class="btn home__btn">Contact realtor</button>
       </div>
+
       <div class="home">
         <img src="img/house-4.jpeg" alt="House 1" class="home__img" />
         <svg class="home__like">
@@ -238,8 +240,9 @@
           </svg>
           <p>€2,950,000</p>
         </div>
-        <button class="cta">Contact realtor</button>
+        <button class="btn home__btn">Contact realtor</button>
       </div>
+
       <div class="home">
         <img src="img/house-5.jpeg" alt="House 1" class="home__img" />
         <svg class="home__like">
@@ -270,8 +273,9 @@
           </svg>
           <p>€9,500,000</p>
         </div>
-        <button class="cta">Contact realtor</button>
+        <button class="btn home__btn">Contact realtor</button>
       </div>
+
       <div class="home">
         <img src="img/house-6.jpeg" alt="House 1" class="home__img" />
         <svg class="home__like">
@@ -302,7 +306,7 @@
           </svg>
           <p>€630,000</p>
         </div>
-        <button class="cta">Contact realtor</button>
+        <button class="btn home__btn">Contact realtor</button>
       </div>
     </section>
 
