nexter project - footer and menu icon

--- a/Nexter/index.html
+++ b/Nexter/index.html
@@ -15,7 +15,9 @@
     <title>nexter &mdash; your home, your freedom</title>
   </head>
   <body class="container">
-    <div class="sidebar">Sidebar</div>
+    <div class="sidebar">
+      <button class="nav-btn"></button>
+    </div>
 
     <header class="header">Header</header>
 
@@ -375,6 +377,32 @@
       </figure>
     </section>
 
-    <footer class="footer">Footer</footer>
+    <footer class="footer">
+      <ul class="nav">
+        <li class="nav__item">
+          <a href="#" class="nav__link">Find your dream home</a>
+        </li>
+        <li class="nav__item">
+          <a href="#" class="nav__link">Request proposal</a>
+        </li>
+        <li class="nav__item">
+          <a href="#" class="nav__link">Download home planner</a>
+        </li>
+        <li class="nav__item"><a href="#" class="nav__link">Contact us</a></li>
+        <li class="nav__item">
+          <a href="#" class="nav__link">Submit your property</a>
+        </li>
+        <li class="nav__item">
+          <a href="#" class="nav__link">Come work with us!</a>
+        </li>
+      </ul>
+      <p class="copyright">
+        &copy; Copyright 2017 by <strong>Jonas Schmedtmann</strong>. The design
+        for this website was created for the Advanced CSS and Sass course
+        available on Udemy. The author authorised the use of it for study cases.
+        This version was coded by <strong>Leandro Reis</strong> on December
+        2020.
+      </p>
+    </footer>
   </body>
 </html>
