--- a/Nexter/index.html
+++ b/Nexter/index.html
@@ -19,9 +19,42 @@
       <button class="nav-btn"></button>
     </div>
 
-    <header class="header">Header</header>
+    <header class="header">
+      <img src="img/logo.png" alt="Logo" class="header__logo" />
+      <h3 class="heading-3">Your own home:</h3>
+      <h1 class="heading-1">The ultimate personal freedom</h1>
+      <button class="btn header__btn">View our properties</button>
+      <div class="header__seenon-text">As seen on</div>
+      <div class="header__seenon-logos">
+        <img src="img/logo-bbc.png" alt="Seen on BBC logo" />
+        <img src="img/logo-forbes.png" alt="Seen on Forbes logo" />
+        <img src="img/logo-techcrunch.png" alt="Seen on TechCrunch logo" />
+        <img src="img/logo-bi.png" alt="Seen on Business Insider logo" />
+      </div>
+    </header>
 
-    <div class="realtors">Top 3 realtors</div>
+    <div class="realtors">
+      <h3 class="heading-3">Top 3 Realtors</h3>
+      <div class="realtors__list">
+        <img src="img/realtor-1.jpeg" alt="Realtor 1" class="realtors__img" />
+        <div class="realtors__details">
+          <h4 class="heading-4 heading-4--light">Danilo Gentili</h4>
+          <p class="realtors__sold">245 houses sold</p>
+        </div>
+
+        <img src="img/realtor-2.jpeg" alt="Realtor 2" class="realtors__img" />
+        <div class="realtors__details">
+          <h4 class="heading-4 heading-4--light">Chelem Rodrigues</h4>
+          <p class="realtors__sold">212 houses sold</p>
+        </div>
+
+        <img src="img/realtor-3.jpeg" alt="Realtor 3" class="realtors__img" />
+        <div class="realtors__details">
+          <h4 class="heading-4 heading-4--light">Diogo Portugal</h4>
+          <p class="realtors__sold">198 houses sold</p>
+        </div>
+      </div>
+    </div>
 
     <section class="features">
       <div class="feature">
